fixed column bug on mobile

--- a/src/app/authentication/authentication.component.css
+++ b/src/app/authentication/authentication.component.css
@@ -3,6 +3,10 @@
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 @keyframes gradient {
@@ -17,31 +21,27 @@
     }
 }
 
-@keyframes shaking {
-    0% {
-        transform: rotate(0deg);
-    }
-    33% {
-        transform: rotate(-45deg);
-    }
-    66% {
-        transform: rotate(45deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
+.bg {
+    width: 100%;
+    height: 100vh;
+}
+
+.bg .bg-1 svg {
+    position: absolute;
+    bottom: 0;
+    rotate: 180deg;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 h1 {
     font-size: 90%;
     text-align: center;
     margin-top: 20%;
-    padding: 0;
-    height: 10%;
     color: rgb(255, 255, 255);
 }
 
 .help {
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +78,6 @@ form {
     border-radius: 10px;
     width: 50%;
     margin-top: 10%;
-    margin-left: 25%;
 }
 
 form mat-form-field {
